Switched from com.jcraft:jsch to com.github.mwiede:jsch